# velox

./: .env.example  .gitignore  README.md  pyproject.toml
config/: runner.yaml
config/environments/: dev.yaml  preprod.yaml  prod.yaml  qa.yaml  staging.yaml  uat.yaml
config/etl/: customer_update.yaml  inventory_refresh.yaml  sample_data_sync.yaml
src/velox/: __init__.py
src/velox/connectors/: __init__.py  base.py
src/velox/connectors/kafka/: __init__.py  auth.py  batch.py  config.py  consumer.py  producer.py
src/velox/core/: __init__.py  base.py  config.py  exceptions.py  metrics.py  templating.py
src/velox/etl/: __init__.py  config.py  registry.py  runner.py
templates/payloads/: customer_update.json.j2  inventory_refresh.json.j2  sample_data_sync.json.j2
